v5.10.2/python/_sources/paraview.simple.ExtractSurface.rst.txt
paraview.simple.ExtractSurface
==============================

.. currentmodule:: paraview.simple

.. autofunction:: ExtractSurface

Data Descriptors
----------------


   
   FastMode
       When enabled, the filter may use approxiamte algorithm for extracting
       the exterior surface at the risk not being highly accurate.
       This may miss interior faces, for example, for structured data with blanking
       for better speed.
   
   Input
       This property specifies the input to the Extract Surface
       filter.
   
   NonlinearSubdivisionLevel
       If the input is an unstructured grid with nonlinear
       faces, this parameter determines how many times the face is subdivided
       into linear faces. If 0, the output is the equivalent of its linear
       counterpart (and the midpoints determining the nonlinear interpolation
       are discarded). If 1, the nonlinear face is triangulated based on the
       midpoints. If greater than 1, the triangulated pieces are recursively
       subdivided to reach the desired subdivision. Setting the value to
       greater than 1 may cause some point data to not be passed even if no
       quadratic faces exist. This option has no effect if the input is not an
       unstructured grid.
   
   PieceInvariant
       If the value of this property is set to 1, internal
       surfaces along process boundaries will be removed. NOTE: Enabling this
       option might cause multiple executions of the data source because more
       information is needed to remove internal surfaces.
   
   UseGeometryFilter
       When enabled, the filter may use `vtkGeometryFilter` internally to generate
       the surface.
   
   

Data Descriptors inherited from Proxy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


   
   __dict__
       dictionary for instance variables (if defined)
   
   __weakref__
       list of weak references to the object (if defined)
   

Methods
-------


   
   Initialize = aInitialize(self, connection=None, update=True)
   
   

Methods inherited from SourceProxy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


   
   FileNameChanged(self)
       Called when the filename of a source proxy is changed.
   
   GetCellDataInformation(self)
       Returns the associated cell data information.
   
   GetDataInformation(self, idx=None)
       This method returns a DataInformation wrapper around a
       vtkPVDataInformation
   
   GetFieldDataInformation(self)
       Returns the associated cell data information.
   
   GetPointDataInformation(self)
       Returns the associated point data information.
   
   UpdatePipeline(self, time=None)
       This method updates the server-side VTK pipeline and the associated
       data information. Make sure to update a source to validate the output
       meta-data.
   
   UpdatePipelineInformation(self)
       This method updates the meta-data of the server-side VTK pipeline and
       the associated information properties
   
   __getitem__(self, idx)
       Given a slice, int or string, returns the corresponding
       output port
   
   

Methods inherited from Proxy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~


   
   GetProperty(self, name)
       Given a property name, returns the property object.
   
   GetPropertyValue(self, name)
       Returns a scalar for properties with 1 elements, the property
       itself for vectors.
   
   InitializeFromProxy(self, aProxy, update=True)
       Constructor. Assigns proxy to self.SMProxy, updates the server
       object as well as register the proxy in _pyproxies dictionary.
   
   ListProperties(self)
       Returns a list of all property names on this proxy.
   
   SetPropertyWithName(self, pname, arg)
       Generic method for setting the value of a property.
   
   __del__(self)
       Destructor. Cleans up all observers as well as remove
       the proxy from the _pyproxies dictionary
   
   __eq__(self, other)
       Returns true if the underlying SMProxies are the same.
   
   __getattr__(self, name)
       With the exception of a few overloaded methods,
       returns the SMProxy method
   
   __hash__(self)
       Return hash(self).
   
   __init__(self, \*\*args)
       Default constructor. It can be used to initialize properties
       by passing keyword arguments where the key is the name of the
       property. In addition registrationGroup and registrationName (optional)
       can be specified (as keyword arguments) to automatically register
       the proxy with the proxy manager.
   
   __iter__(self)
       Creates an iterator for the properties.
   
   __ne__(self, other)
       Returns false if the underlying SMProxies are the same.
   
   __setattr__(self, name, value)
       Implement setattr(self, name, value).
   
   add_attribute(self, name, value)
   
   



For the full list of servermanager proxies, please refer to :doc:`Available readers, sources, writers, filters and animation cues <paraview.servermanager_proxies>`